# dumi

./: .dumirc.ts  .editorconfig  .eslintignore  .eslintrc.js  .fatherrc.js  .fatherrc.ts  .gitignore  .nowignore  .npmignore  .prettierignore  .prettierrc.js  .stylelintrc  .umirc.ts  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  azure-pipelines.yml  bundler-utils.d.ts  bundler-utils.js  circle.yml  dumi-types.d.ts  index.d.ts  index.html  jest.config.js  jest.config.ts  lerna.json  mako.config.json  now.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  rust-toolchain.toml  tech-stack-utils.d.ts  tech-stack-utils.js  theme-api.d.ts  theme-cases.json  theme-modules.d.ts  theme.d.ts  (+4 more)
.dumi/: app.tsx  global.less  tsconfig.json
.dumi/pages/: __internal.tsx  _internal.tsx
.dumi/theme/: plugin.ts
.github/: PULL_REQUEST_TEMPLATE.md
assets-types/: package.json
config/: config.js  plugin.404.ts
crates/swc_plugin_react_demo/: Cargo.toml  package.json
crates/swc_plugin_react_demo/src/: lib.rs  utils.rs
docs/: example.md  examples.md  examples.zh-CN.md  getting-started.md  index.en-US.md  index.md  index.zh-CN.md  migration.md  multi-language.md  write-demo.md
scripts/: ci-mock-project-build.js  deploy_doc.sh  jest-setup.js  miscUtil.ts  pkg-pr-new.ts  pre-bundle-worker.js  prepare-examples.ts  release.ts  releasePublish.ts  sync-from-umi.js  update-readme-user.js  vercel-install.sh
src/: cli.ts  constants.ts  index.js  index.ts  preset.ts  registerMethods.ts  techStackUtils.ts  types.ts  utils.test.ts  utils.ts
tests/: build.test.ts
(+717 files in other folders)
